@@ -52,6 +52,7 @@
 
 #include <stdatomic.h>
 #include <cstddef>
+#include <cassert> // XXX static_assert vs. constant-expression PR38502
 
 _GLIBCXX_BEGIN_NAMESPACE(std)
 
