@@ -1,3 +1,11 @@
+2008-12-13  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* src/atomic.cc: Revert last change.
+	* include/bits/atomic_2.h: Move cassert include to...
+	* include/c_global/cstdatomic: ...here.
+	* testsuite/29_atomics/atomic/cons/assign_neg.cc: Adjust line numbers.
+	* testsuite/29_atomics/atomic/cons/copy_neg.cc: Same.
+
 2008-12-12  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* src/Makefile.am: Remove -x c++ for atomic build rules.
